--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ bootwatch: flatly
 # Build settings
 markdown: kramdown
 highlighter: rouge
-gems:
+plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-seo-tag
